# toolbox

./: README.md  TODO.md  pyproject.toml
Averaging/: averaging.py  error_propagation.py
Averaging/Examples/: test.txt
Averaging/UIs/: MainWindow.py  MainWindow.ui
Epsilonator/: epsilons_calculator.py  error_propagation.py
Epsilonator/ExampleResults/: AllResults_epsilons_and_error.csv  Epsilons_and_Error.csv  Epsilons_plus_minus_Error.csv  Metastable_Epsilons_plusminus_Error.csv  Stable_Epsilons_plusminus_Error.csv
PSS_Calculator/: PSS_Calculator.py
PSS_Calculator/UIs/: MainWindow.py  MainWindow.ui
PSS_Calculator/tools/: load_data.py  process_spectra.py
SpectraFitter/: SpectraFitter.py  SpectraFitter_batch.py  SpectraFitter_single.py
SpectraFitter/ExampleFits/: ALLFITS_RESIDUALS_Spectra_AB_irr455nm_cut.csv  ALLFITS_Spectra_AB_irr455nm_cut.csv  AllFittedSpectra_DHA_2_Irr365nm_cut_bl_imperfect.csv  AllFittedSpectra_Spectra_AB_irr455nm_cut.csv  AllResiduals_DHA_2_Irr365nm_cut_bl_imperfect.csv  AllResiduals_Spectra_AB_irr455nm_cut.csv  FIRSTLAST_Spectra_AB_irr455nm_cut.csv  FirstLastFittedSpectra_DHA_2_Irr365nm_cut_bl_imperfect.csv  FirstLastFittedSpectra_Spectra_AB_irr455nm_cut.csv
SpectraFitter/UIs/: MainWindow.py  MainWindow.ui
SpectraFitter/tools/: FitPekarianGaussianHybrid.py  FitWorker_Auto_SingleSpectrum.py  batch_FitPekarianGaussianHybrid.py  load_data.py
molgeom/: molgeom  reorient
plotter_TDDFT/: UV_spectrum.py
src/: data_handling.py  process_spectra.py
